# shellteam

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile.example  INSTALL.md  NOTICE  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.github/: pull_request_template.md
api/: config.py  dependencies.py  main.py
computer/: file-editor.html
config/: models.json
docs/: ARCHITECTURE.md  FOOTPRINT.md  release-qa.md
frontend/: browser.html  dashboard.html  knowledge.html  terminal.html
scripts/: cleanup-legacy-agent-config.py  golden-portable-sessions.mjs  self-update.sh
tests/: conftest.py  test_agent_layer.py  test_ai_tools.py  test_auth_router.py  test_auth_service.py  test_auto_update.py  test_ci_gates.py  test_cli_version_isolation.py  test_composio_credentials.py  test_composio_footprint.py  test_computers_router.py  test_content_inline.py  test_content_sandbox.py  test_credentials_service.py  test_dependencies.py  test_design_system.py  test_dreaming.py  test_enrollment.py  test_feature_keys.py  test_feedback.py  test_fireworks_proxy.py  test_frontend_accessibility.py  test_frontend_regressions.py  test_global_rate_limit.py  test_hardening.py  test_hardening_v2.py  test_hardening_v3.py  test_install_bootstrap.py  test_install_caddy_guard.py  test_install_env_read.py  test_installer.py  test_integrations_router.py  test_internal_ports.py  test_internal_refresh.py  test_internal_router.py  test_knowledge_api.py  test_knowledge_tree.py  test_main.py  test_markdown_links.py  (+19 more)
(+187 files in other folders)
